--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -22,9 +22,14 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          
+      - name: Debug files
+        run: |
+          pwd
+          ls -R
 
       - name: Run Scraper
-        run: python kyallface.github.io/scraper.py
+        run: python scraper.py
 
       - name: Commit and Push Updated Files
         run: |
