--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -29,7 +29,7 @@ jobs:
           ls -R
 
       - name: Run Scraper
-        run: python scraper.py
+        run: python Scraper.py
 
       - name: Commit and Push Updated Files
         run: |
