--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -35,6 +35,6 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add events.csv events.json
+          git add bka_grading_events.csv bka_raw_events.json
           git commit -m "Auto-update events data [skip ci]" || echo "No changes to commit"
           git push
