--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -5,13 +5,18 @@ on:
     - cron: "45 10 * * *"   # Runs every day at 06:00 UTC
   workflow_dispatch:       # Allows manual triggering from GitHub UI
 
+permissions:
+  contents: write
+
 jobs:
   scrape:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Python
         uses: actions/setup-python@v5
