--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -17,6 +17,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -40,7 +41,10 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git pull --rebase
+          
+          git fetch origin
+          git rebase origin/main
+          
           git add bka_grading_events.csv bka_raw_events.json
           git commit -m "Auto-update events data [skip ci]" || echo "No changes to commit"
-          git push
+          git push origin main
