--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -2,7 +2,7 @@ name: BKA Event Scraper
 
 on:
   schedule:
-    - cron: "45 10 * * *"   # Runs every day at 06:00 UTC
+    - cron: "45 10 * * *"   # Runs every day at 10:45 UTC
   workflow_dispatch:       # Allows manual triggering from GitHub UI
 
 permissions:
@@ -17,7 +17,14 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          fetch-depth: 0
+          fetch-depth: 0  # Full history for proper rebase
+
+      - name: Pull latest changes first
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git fetch origin
+          git rebase origin/main
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -28,7 +35,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          
+
       - name: Debug files
         run: |
           pwd
@@ -39,12 +46,6 @@ jobs:
 
       - name: Commit and Push Updated Files
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          
-          git fetch origin
-          git rebase origin/main
-          
           git add bka_grading_events.csv bka_raw_events.json
           git commit -m "Auto-update events data [skip ci]" || echo "No changes to commit"
           git push origin main
