--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -24,6 +24,7 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git fetch origin
+          git stash --include-untracked
           git rebase origin/main
 
       - name: Set up Python
